[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "import_demo"
version = "0.1.0"
description = "A description of your project"
authors = [
    { name="Luke Chang", email="luke.x.chang@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools]
package-dir = {"" = "app"}
